[package]
name = "export-kindle"
version = "0.1.5"
edition = "2021"
authors = ["masinc <masinc000@gmail.com>"]
description = "Export Kindle book list to JSON or YAML"
license = "MIT OR Apache-2.0"
repository = "https://github.com/masinc/export-kindle"


[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

[dependencies.clap]
version = "4.2"
features = ["derive"]

[dependencies.quick-xml]
version = "0.28"
features = ["serialize"]
